--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:universal": "ng build --prod && ng build --prod --app 1 --output-hashing=false && cpy ./server.js ./dist",
+    "serve:universal": "npm run build:universal && cd dist && node server",
+    "pwa": "ng build --prod --aot && sw-precache --root=dist --config=precache-config.js && ng build --prod --app universal --output-hashing=none  && ts-node server && ng build --prod --app 1 --output-hashing=false && cpy ./server.js ./dist",
+    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.4.6",
+    "@angular/app-shell": "^0.1.0",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
@@ -20,25 +25,64 @@
     "@angular/http": "^4.2.4",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
+    "@angular/platform-server": "^4.4.6",
     "@angular/router": "^4.2.4",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
+    "@angular/service-worker": "^5.0.3",
+    "@angular2-material/core": "^2.0.0-alpha.8-3",
+    "@angular2-material/toolbar": "^2.0.0-alpha.8-3",
+    "@cloudinary/angular-4.x": "^1.1.0",
+    "@nguniversal/express-engine": "^5.0.0-beta.5",
+    "angular-4-data-table": "^0.2.4",
+    "angular-4-data-table-bootstrap-4": "^0.2.0",
+    "angular-bootstrap-md": "^5.0.5",
+    "angular2-universal": "^2.1.0-rc.1",
+    "angular4-paystack": "^2.0.0",
+    "angularfire-lite": "^5.0.1-beta",
     "angularfire2": "^4.0.0-rc0",
+    "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
+    "classlist.js": "^1.1.20150312",
+    "cloudinary-core": "^2.4.0",
     "core-js": "^2.4.1",
-    "firebase": "^4.2.0",
+    "enhanced-resolve": "^3.3.0",
+    "express": "^4.16.2",
+    "firebase": "^3.9.0",
     "font-awesome": "^4.7.0",
     "fontawesome": "^4.7.2",
+    "import-export": "^1.0.1",
+    "intl": "^1.2.5",
+    "mdbootstrap": "^4.4.3",
+    "ng-lazyload-image": "^3.3.6",
+    "ng-pwa-tools": "0.0.15",
+    "ng2-typewriter": "^1.1.0",
+    "ng2-validation": "^4.2.0",
+    "ngx-lazy-load-images": "^1.3.0",
+    "preboot": "^6.0.0-beta.1",
+    "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.2",
+    "source-map-support": "^0.5.0",
+    "sw-toolbox": "^3.6.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.5",
+    "@angular/cli": "^1.6.3",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "autoprefixer": "^6.5.3",
+    "circular-dependency-plugin": "^4.2.1",
     "codelyzer": "~3.2.0",
+    "copy-webpack-plugin": "^4.1.1",
+    "cpy-cli": "^1.0.1",
+    "css-loader": "^0.28.1",
+    "cssnano": "^3.10.0",
+    "exports-loader": "^0.6.3",
+    "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.29.0",
+    "istanbul-instrumenter-loader": "^2.0.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -47,9 +91,25 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "less-loader": "^4.0.5",
+    "postcss-loader": "^2.0.8",
+    "postcss-url": "^7.1.2",
     "protractor": "~5.1.2",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.3",
+    "source-map-explorer": "^1.5.0",
+    "source-map-loader": "^0.2.0",
+    "style-loader": "^0.13.1",
+    "stylus-loader": "^3.0.1",
+    "sw-precache-webpack-plugin": "^0.11.4",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.3.3"
+    "typescript": "~2.3.3",
+    "uglifyjs-webpack-plugin": "~1.1.2",
+    "url-loader": "^0.6.2",
+    "webpack": "~3.10.0",
+    "webpack-concat-plugin": "^1.4.2",
+    "webpack-dev-server": "~2.9.3",
+    "webpack-node-externals": "^1.6.0"
   }
 }
